# cheetah

./: CMakeLists.txt
source/: CMakeLists.txt
source/cheetah-eiger/: CMakeLists.txt  main-eiger.cpp
source/libcheetah/include/: detectorObject.h
source/libcheetah/src/: detectorObject.cpp
